FlightPath 6.x Changelog
========================


2022-12-19
  Fixed bug where dialogs were not closing after save (javascript had been disabled).


2022-12-10
  Fixed bug which was introduced in last version to the piechart engine, which made it stop working.
  
  Fixed bug in user module, which prevented manually creating staff users.
  

2022-11-12
  Edited pChart library to use new __construct() instead of class name for constructor functions.  This made it compatible with PHP 8.0.
  Also changed "var" keyword to "public" for variables, and set them to NULL instead of array(), especially since some of them
  are actually supposed to be objects.
    
  Made various other clean-up changes to make compatible with PHP 8.0.
  

2022-11-06
  Continued work to make compatible with PHP 8.0.
    

2022-11-05
  Cleaned up Administrator's Toolbox (courses) to make it cleaner.  Also fixed bug where it was not showing where
  a course was assigned.
  
  Continuing work to increase compatibility with PHP 8.0.
  

2022-11-04
  Added code to increase compatibility with PHP 8.0.


2022-11-03
  Changed "Login" button to "Log in" to be consistent with English rules.
  
  Added more options for TinyMCE, including links and the ability to resize the editor.
  

2022-10-31
  Clarified instructions for default advising term.
  

2022-10-27
  Improved documentation for definitions.
  

2022-10-25
  For the _fp_error_handler() function, made it so the $msg saved to watchdog (and possibly emailed)
  is no more than 10,000 characters.
  
  Fixed bug in lassie_cron() where we were not getting the most recent "last check" correctly.  It was causing
  us to check for long-running jobs on every cron run, rather than no more than once every 45 minutes (as intended).
  

2022-10-19
  Added function get_faculty_email() to db.inc file.
  

2022-10-18
  Modified email that engagements sends out, so that the link is wrapped in <a> tag.
  