@@ -642,6 +642,26 @@ function admin_duplicate_year_form() {
 }
 
 
+
+/**
+ * Before we duplicate the year, make sure the password is correct.
+ */
+function admin_duplicate_year_form_validate($form, &$form_state) {  
+    
+  $values = $form_state["values"];
+  
+  // Check to make sure they entered the transfer passcode correctly.
+  if ($values["passcode"] != variable_get("admin_transfer_passcode", sha1(mt_rand()))) {
+
+    form_error("passcode", t("Sorry, but the password you entered is not correct.  Check with the FlightPath administrator
+                              (or check the admin settings pages) to learn the password."));
+    return;
+    
+  }
+      
+}
+
+
 /**
  * This function should perform the actual copy of data!
  *
@@ -658,15 +678,6 @@ function admin_duplicate_year_form_submit($form, &$form_state) {
   // Check to make sure they entered the transfer passcode correctly.
   $db = get_global_database_handler();    
   
-  if ($values["passcode"] != variable_get("admin_transfer_passcode", sha1(mt_rand()))) {
-
-    form_error("passcode", t("Error!  The password you entered is not correct.  Check with the FlightPath administrator
-                              (or check the admin settings pages) to learn the password."));
-    return;
-    
-  }
-
-
   // Okay, we made it this far, let's proceed with the copy!
   $new_year = $values["destination_year"];
   $old_year = $values["source_year"];
@@ -1069,6 +1080,30 @@ function admin_apply_draft_changes_form() {
 }
 
 
+
+
+
+/**
+ * Before we apply changes, make sure the password is correct.
+ */
+function admin_apply_draft_changes_form_validate($form, &$form_state) {  
+    
+  $values = $form_state["values"];
+  
+  // Check to make sure they entered the transfer passcode correctly.
+  if ($values["passcode"] != variable_get("admin_transfer_passcode", sha1(mt_rand()))) {
+
+    form_error("passcode", t("Sorry, but the password you entered is not correct.  Check with the FlightPath administrator
+                              (or check the admin settings pages) to learn the password."));
+    return;
+    
+  }
+      
+}
+
+
+
+
 /**
  * Handles the actual moving of draft courses into production.
  */
@@ -1079,15 +1114,6 @@ function admin_apply_draft_changes_form_submit($form, $form_submit) {
   
   $de_catalog_year = admin_get_de_catalog_year();
   
-  // Check to make sure they entered the transfer passcode correctly.
-    
-  if ($values["passcode"] != variable_get("admin_transfer_passcode", sha1(mt_rand(1,9999999)))) {
-
-    form_error("passcode", t("Error!  The password you entered is not correct.  Check with the FlightPath administrator
-                              (or check the admin settings pages) to learn the password."));
-    return;
-    
-  }
 
   // Keep the script from timing out prematurely...
   set_time_limit(99999);  // around 27 hours (so it runs a really long time).
